[gd_scene load_steps=10 format=3 uid="uid://bck0qd45xmxol"]

[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_41wkb"]
[ext_resource type="Script" path="res://player.gd" id="1_lji51"]
[ext_resource type="PackedScene" uid="uid://gwherq2dkfsq" path="res://gun.tscn" id="3_cc3hf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h57sy"]
radius = 33.0151

[sub_resource type="CircleShape2D" id="CircleShape2D_3sldc"]
radius = 42.0119

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5jn6i"]
bg_color = Color(1, 0.339535, 0.308065, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s6u3"]
bg_color = Color(0.375681, 0.68871, 0.312707, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dha4h"]
bg_color = Color(0.0512446, 0.0980474, 0.161512, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vdap"]
bg_color = Color(0.0892369, 0.342766, 0.782233, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_lji51")

[node name="HappyBoo" parent="." instance=ExtResource("1_41wkb")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = -0.0135192
shape = SubResource("CircleShape2D_h57sy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_cc3hf")]
position = Vector2(16, -32)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_3sldc")
debug_color = Color(0.979199, 0.0868027, 0.293779, 0.42)

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -66.0
offset_top = -136.0
offset_right = 66.0
offset_bottom = -109.0
theme_override_styles/background = SubResource("StyleBoxFlat_5jn6i")
theme_override_styles/fill = SubResource("StyleBoxFlat_1s6u3")
value = 100.0
show_percentage = false

[node name="XpBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -64.0
offset_top = -169.0
offset_right = 62.0
offset_bottom = -142.0
theme_override_styles/background = SubResource("StyleBoxFlat_dha4h")
theme_override_styles/fill = SubResource("StyleBoxFlat_5vdap")
